--- a/hooks/daka-hook/docroot/custom_jsps/html/portlet/message_boards/css/rtl/main.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/portlet/message_boards/css/rtl/main.css
@@ -25,23 +25,23 @@
 		border-left: 1px solid #ccc;
 		color: #000;
 		margin-left: 5px;
-		padding: 0px 5px 0px 5px;
+		padding:0px 5px 0px 5px;
 	}
 
 	.quote {
-		background: #fff url(@theme_image_path@/message_boards/quoteleft.png) left top no-repeat;
+		background: #fff url(@theme_image_path@/rtl/message_boards/quoteleft.png) right top no-repeat;
 		border: 1px solid #777;
-		padding: 5px 5px 0px 0px;
+		padding:5px 5px 0px 0px;
 	}
 
 	.quote-content {
-		background: transparent url(@theme_image_path@/message_boards/quoteleft.png) right bottom no-repeat;
-		padding: 5px 30px 10px 30px;
+		background: transparent url(@theme_image_path@/rtl/message_boards/quoteright.png) left bottom no-repeat;
+		padding:5px 30px 10px 30px;
 	}
 
 	.quote-title {
 		font-weight: bold;
-		padding: 5px 0px 5px 0px;
+		padding:5px 0px 5px 0px;
 	}
 
 	.title {
@@ -57,7 +57,7 @@
 
 	.message-container {
 		border: 1px solid #ccc;
-		margin: 5px 0 0 0;
+		margin:5px 0 0 0;
 
 		table {
 			border-collapse: collapse;
@@ -80,7 +80,7 @@
 	}
 
 	.taglib-ratings.thumbs .total-rating {
-		padding: 0px 10px 0px 5px;
+		padding:0 10px 0 5px;
 	}
 
 	td.user-info {
@@ -164,7 +164,7 @@
 	.votes, .status {
 		display: inline-block;
 		height: 38px;
-		margin: 0 3px 0 0;
+		margin:0 0 0 3px;
 		padding: 5px;
 		text-align: center;
 	}
@@ -197,7 +197,7 @@
 
 	.toggle_id_message_boards_view_message_thread {
 		border: 1px solid #ccc;
-		margin: 5px 0 0 0;
+		margin:5px 0 0 0;
 		width: 100%;
 	}
 
@@ -240,7 +240,7 @@
 	}
 
 	.message-scroll {
-		margin: 5px 0 0 0;
+		margin:5px 0 0 0;
 	}
 
 	.lfr-textarea.message-edit {
