--- a/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/dockbar.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/dockbar.css
@@ -371,9 +371,9 @@ html > .lfr-dockbar-pinned {
 }
 
 .dockbar .menu-button {
-	background: url(../../images/rtl/arrows/05_down.png) no-repeat 93% 50%;
+	background: url(../../images/rtl/arrows/05_down.png) no-repeat left 50%;
 	display: inline-block;
-	padding: 5px 20px 5px 5px;
+	padding: 5px 5px 5px 15px;
 	text-decoration: none;
 }
 
