--- a/hooks/daka-hook/docroot/custom_jsps/html/portlet/asset_category_admin/css/rtl/main.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/portlet/asset_category_admin/css/rtl/main.css
@@ -51,7 +51,7 @@
 	}
 
 	.categories-admin-search .aui-field-input {
-		background-image: url(@theme_image_path@/common/search.png);
+		background-image: url(@theme_image_path@/rtl/common/search.png);
 		background-repeat: no-repeat;
 		background-position: 5px 50%;
 		padding-right: 25px;
@@ -79,7 +79,7 @@
 	}
 
 	.vocabulary-item-actions-trigger {
-		background-image: url(@theme_image_path@/common/edit.png);
+		background-image: url(@theme_image_path@/rtl/common/edit.png);
 		background-repeat: no-repeat;
 		clip: rect(0pt, 0pt, 0pt, 0pt);
 		display: block;
@@ -120,7 +120,7 @@
 
 		a {
 			display: block;
-			padding: 8px 10px 8px 20px;
+			padding:8px 10px 8px 20px;
 			text-decoration: none;
 		}
 	}
@@ -223,7 +223,7 @@
 	}
 
 	.vocabulary-edit-category .category-view {
-		padding: 0px 0px 0px 5px;
+		padding:0 0px 0 5px;
 	}
 
 	.category-view-close {
@@ -264,7 +264,7 @@
 			}
 
 			&.aui-tree-collapsed .aui-tree-hitarea {
-				background-position: right 50%;
+				background-position: 0 50%;
 			}
 
 			.aui-tree-node-checkbox-container, .aui-tree-label {
