--- a/hooks/daka-hook/docroot/custom_jsps/html/portlet/rss/css/rtl/main.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/portlet/rss/css/rtl/main.css
@@ -1,12 +1,12 @@
 .portlet-rss {
 	.feed-date {
-		background: url(@theme_image_path@/common/time.png) no-repeat right 50%;
+		background: url(@theme_image_path@/rtl/common/time.png) no-repeat right 50%;
 		margin: 0.3em 0;
 		padding-right: 20px;
 	}
 
 	.feed-description {
-	 	margin: 0 0 5px 0;
+	 	margin:0 0 5px 0;
 	}
 
 	.feed-entries {
@@ -47,18 +47,18 @@
 	}
 
 	.feed-image-left {
-	 	margin: 4px 20px 4px 0px;
+	 	margin:4px 20px 4px 0;
 	 	text-align: right;
 	}
 
 	.feed-image-right {
 		float: left;
-	 	margin: 0px 4px 4px 0px;
+	 	margin:0 4px 4px 0;
 	}
 
 	.feed-published-date {
 		&.feed-date {
-			background-image: url(@theme_image_path@/common/date.png)
+			background-image: url(@theme_image_path@/rtl/common/date.png)
 		}
 
 		a {
@@ -73,7 +73,7 @@
 		margin: 0 0 0.5em -20px;
 
 		a {
-			background: url(@theme_image_path@/common/news.png) no-repeat right 50%;
+			background: url(@theme_image_path@/rtl/common/news.png) no-repeat right 50%;
 			padding-right: 20px;
 		}
 	}
