--- a/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/application.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/application.css
@@ -498,7 +498,7 @@
 .aui-toolbar li {
 	display: inline-block;
 	margin: 0;
-	margin-right: 10px;
+	margin-left: 10px;
 	padding: 0;
 	vertical-align: middle;
 }
@@ -513,6 +513,7 @@
 	overflow: hidden;
 	vertical-align: middle;
 	width: 4px;
+	float:left;
 }
 
 /* ---------- Loading Mask ---------- */
