--- a/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/portlet.css
+++ b/hooks/daka-hook/docroot/custom_jsps/html/themes/control_panel/css/rtl/portlet.css
@@ -56,7 +56,7 @@ body.portlet {
 }
 
 .portlet-icon-back {
-	background: url(../../images/rtl/arrows/01_left.png) no-repeat left 50%;
+	background: url(../../images/arrows/01_left.png) no-repeat left 50%;
 	font-weight: bold;
 	padding: 5px 5px 5px 18px;
 }
@@ -524,7 +524,7 @@ body.portlet {
 .restricted, .alt.restricted {
 	td.col-1 {
 		background-image: url(../../images/rtl/messages/error.png);
-		background-position: 5px 50%;
+		background-position: 95% 50%;
 		background-repeat: no-repeat;
 		padding-right: 28px;
 	}
@@ -535,7 +535,7 @@ body.portlet {
 .results-row, .results-row.hover {
 	&.lfr-role .col-1 {
 		background-image: url();
-		background-position: 5px 50%;
+		background-position: 95% 50%;
 		background-repeat: no-repeat;
 		padding-right: 30px;
 	}
