--- a/themes/daka-theme/docroot/css/rtl/application.css
+++ b/themes/daka-theme/docroot/css/rtl/application.css
@@ -498,7 +498,7 @@
 .aui-toolbar li {
 	display: inline-block;
 	margin: 0;
-	margin-right: 10px;
+	margin-left: 10px;
 	padding: 0;
 	vertical-align: middle;
 }
